--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="header">
-        <img src="./images/wip_8090268.png" alt="logo wip" id="logo">
+        <h3 id="logo">Header logo</h3>
         <ul>
             <li><a href="#">Header link one</a></li>
             <li><a href="#">Header link two</a></li>
@@ -16,24 +19,34 @@
         </ul>
     </div>
     <div id="content">
+        <div id="content_left">
         <h1>This website is awesome</h1>
         <p>This website has some subtext that goes here under the main title.
             It's smaller font and the color is lower contrast
         </p>
         <button id="signup_content">Sign up</button>
-        <img src="./images/daria-nepriakhina-wvTPV8DIdEw-unsplash.jpg" alt="">
     </div>
+        <img id="img_hero" src="./images/daria-nepriakhina-wvTPV8DIdEw-unsplash.jpg" alt="journal">
+    </div>
+    <h2>Some random information</h2>
     <div id="card_section">
-        <h2>Some random information</h2>
+        <div class="card">
         <img src="./images/mars-williams--8b50abrBGw-unsplash.jpg" alt="man climbing rock">
             <p>This is some subtext under illustration or image</p>
+        </div>
+        <div class="card">
         <img src="./images/mars-williams--8b50abrBGw-unsplash.jpg" alt="man climbing rock">
             <p>This is some subtext under illustration or image</p>
+        </div>
+        <div class="card">
         <img src="./images/mars-williams--8b50abrBGw-unsplash.jpg" alt="man climbing rock">
             <p>This is some subtext under illustration or image</p>
+        </div>
+        <div class="card">
         <img src="./images/mars-williams--8b50abrBGw-unsplash.jpg" alt="man climbing rock">
             <p>This is some subtext under illustration or image</p>
         </img>
+        </div>
     </div>
     <div id="quote_section">
         <h3>This is inspiring quote, or testimonal from a customer.
@@ -43,8 +56,10 @@
         <p class="signature">-Thor, God Of Thunder</p>
     </div>
     <div id="calltoaction">
+        <div id="callleft">
         <h4>Call to action! It's time!</h4>
         <p>Sign up for our product by clicking that button right over there!</p>
+    </div>
         <button id="signup_bottom">Sign up</button>
     </div>
     <div id="footer">
